<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">PodTrack</string>
    <string name="titleScreenLabel">PodTrack</string>
    <string name="queueScreenLabel">PodTrack</string>
    <string name="downloadedScreenLabel">PodTrack</string>
    <string name="subsScreenLabel">PodTrack</string>
    <string name="optionScreenLabel">PodTrack</string>
    <string name="subViewScreenLabel">PodTrack</string>
    <string name="titleStr">PodTrack</string>
    <string name="queueStr">My Queue</string>
    <string name="subsStr">Subscriptions</string>
    <string name="optionsStr">Options</string>
    <string name="footerStr">Eric Vande Griek  -  2011</string>
    <string name="queueTitleStr">My Queue</string>
    <string name="subsTitleStr">Subscriptions</string>
    
    <string name="menuView">View</string>
    <string name="menuQueueAdd">Add to Queue</string>
    <string name="menuQueueRemove">Remove from Queue</string>
    <string name="menuViewSub">View Subscription</string>
    <string name="feedItemViewScreenLabel">PodTrack</string>
    <string name="new_sub">New Sub</string>
    <string name="sub_rss_url">Subscription RSS Feed URL</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="add_to_queue">Add To Queue</string>
    <string name="mark_as_listened">Mark As Listened</string>
    <string name="test_rss_url2">http://www.rss-specifications.com/rss-podcast.xml</string>
    <string name="test_rss_url3">http://www.giantbomb.com/podcast-xml/</string>
    <string name="test_rss_url4">http://feeds.feedburner.com/TheBestiesPodcast?format=xml</string>
    <string name="test_rss_url5">http://popquizzical.libsyn.com/rss</string>
    <string name="test_rss_url">http://geeksofsteel.libsyn.com/rss</string>
    <string name="refresh">Refresh</string>
    <string name="clearQueue">Clear Queue</string>
    <string name="queueRemove">Queue Remove</string>
    <string name="play">Play</string>
    <string name="moveToTop">Move To Top</string>
    <string name="moveToBottom">Move To Bottom</string>
    <string name="download">Download</string>
    <string name="delete">Delete</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="testStringLong">test TEST tEsT TEST test TEST test TEST tEsT TEST test</string>
    <string name="testStringShort">TEST test TEST</string>
    <string name="testStringNumber">23</string>
    <string name="downloaded">Downloaded</string>
    <string name="view_sub">View Subscription</string>
</resources>
